remove the last project

--- a/index.html
+++ b/index.html
@@ -132,17 +132,7 @@
 									</ul>
 								</article>
 								
-<article>
-									<header>
-										<h2><a href="#">wikipedia Scraping Data<br />
-										with Python</a></h2>
-									</header>
-									<a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/blob/main/Scraping%20a%20Table%20from%20a%20Website.ipynb" target="_blank" class="image fit"><img src="images/00.jpg" alt="" /></a>
-									<p>In this project we scrape data table from wikipedia to visual this data in python as example of pulling tables</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/blob/main/Scraping%20a%20Table%20from%20a%20Website.ipynb" target="_blank" class="button">View Project</a></li>
-									</ul>
-								</article>
+لهف
 				<!-- Footer -->
 					<footer id="footer">
 
