--- a/index.html
+++ b/index.html
@@ -79,11 +79,13 @@
 										<h2><a href="#">Power Bi Dashboard<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/PowerBi-Dashboard" target="_blank"  class="image fit"><img src="images/power-BI.jpeg" alt="" /></a>
-									<p>This project demonstrates the creation of an interactive Power BI dashboard designed to analyze and visualize data effectively. It provides insights that support data-driven decision-making and highlights key trends and performance indicators.
+									<a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Power%20Bi%20-projects" target="_blank"  class="image fit"><img src="images/power-BI.jpeg" alt="" /></a>
+									<p>1. Clustered HR Data Dashboards – HR analytics using DAX, clustering, and KPIs for workforce insights.
+
+<br> <br>2. Professional Survey Breakdown – Global survey analysis on salaries, roles, and satisfaction metrics.
  </p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/PowerBi-Dashboard" target="_blank" class="button">View Project</a></li>
+										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Power%20Bi%20-projects" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
