--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="#">Data Cleaning in pandas<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Data%20Cleaning%20in%20Pandas" target="_blank" class="image fit"><img src="images/audio-.jpg" alt="" /></a>
+									<p>Cleaned and processed a customer call list dataset using Python (Pandas) by removing duplicates, handling missing values, and standardizing contact information for accurate analysis.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Data%20Cleaning%20in%20Pandas" target="_blank" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="#">Movie Correlation<br />
 										with Python</a></h2>
 									</header>
