--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="#">EDA pandas<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Pandas-EDA" target="_blank" class="image fit"><img src="images/PopulationMonde2.jpg" alt="" /></a>
+									<p>The project provides a clear understanding of population dynamics worldwide, highlights significant trends over the years, and demonstrates strong skills in data analysis and visualization, making it a valuable addition to any data analytics portfolio.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Pandas-EDA" target="_blank" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="#">Movie Correlation<br />
 										with Python</a></h2>
 									</header>
