--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Data Cleaning <br />
+									<h2><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" target="_blank">Data Cleaning<br />
 									in SQL</a></h2>
-									<p>In this project we take Layoffs data and transform <br />
-									it in SQL Server to make it more usable for analysis .<br />
+									<p>In this project we take raw housing data and transform <br />
+									it in SQL Server to make it more usable for analysis.<br />
 									</p>
 								</header>
-								<a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/blob/main/Portfolio%20Project%20-%20Data%20Cleaning.sql" target="_blank" class="image main"><img src="images/layoffs.jpg.jpg" alt="" /></a>
+								<a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" target="_blank" class="image main"><img src="images/housing.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/blob/main/Portfolio%20Project%20-%20Data%20Cleaning.sql" target="_blank" class="button large">View Project</a></li>
+									<li><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" target="_blank" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -64,19 +64,20 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Layoff<br />
+										<h2><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/COVID%20Portfolio%20Project%20-%20Data%20Exploration.sql"  target="_blank">COVID 19
+<br />
 										Data Exploration</a></h2>
 									</header>
-									<a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/blob/main/Portfolio%20Project%20-%20EDA.sql" target="_blank"  class="image fit"><img src="images/048.jpg" alt="" /></a>
-									<p>In this project we use SQL Server to explore Layoff  data. </p>
+									<a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/COVID%20Portfolio%20Project%20-%20Data%20Exploration.sql" target="_blank"  class="image fit"><img src="images/covid.jpg" alt="" /></a>
+									<p>In this project we use SQL Server to explore global COVID 19 data. </p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/blob/main/Portfolio%20Project%20-%20EDA.sql" target="_blank" class="button">View Project</a></li>
+										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/COVID%20Portfolio%20Project%20-%20Data%20Exploration.sql" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 
 								<article>
 									<header>
-										<h2><a href="#">Power Bi Dashboard<br />
+										<h2><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Power%20Bi%20-projects" target="_blank">Power Bi Dashboard<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Power%20Bi%20-projects" target="_blank"  class="image fit"><img src="images/power-BI.jpeg" alt="" /></a>
@@ -90,7 +91,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Tableau Dashboards<br />
+										<h2><a href="https://public.tableau.com/app/profile/motasem.kharouf/vizzes" target="_blank">Tableau Dashboards<br />
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/motasem.kharouf/vizzes" target="_blank" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
@@ -101,24 +102,24 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Data Cleaning in pandas<br />
+										<h2><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Data%20Cleaning%20in%20Pandas/Data%20Cleaning%20in%20Pandas.ipynb" target="_blank">Data Cleaning in pandas<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Data%20Cleaning%20in%20Pandas" target="_blank" class="image fit"><img src="images/audio-.jpg" alt="" /></a>
+									<a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Data%20Cleaning%20in%20Pandas/Data%20Cleaning%20in%20Pandas.ipynb" target="_blank" class="image fit"><img src="images/audio-.jpg" alt="" /></a>
 									<p>Cleaned and processed a customer call list dataset using Python (Pandas) by removing duplicates, handling missing values, and standardizing contact information for accurate analysis.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Data%20Cleaning%20in%20Pandas" target="_blank" class="button">View Project</a></li>
+										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Data%20Cleaning%20in%20Pandas/Data%20Cleaning%20in%20Pandas.ipynb" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">EDA pandas<br />
+										<h2><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Pandas-EDA/Exploratory%20Data%20Analysis%20in%20Pandas.ipynb" target="_blank">EDA pandas<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Pandas-EDA" target="_blank" class="image fit"><img src="images/PopulationMonde2.jpg" alt="" /></a>
+									<a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Pandas-EDA/Exploratory%20Data%20Analysis%20in%20Pandas.ipynb" target="_blank" class="image fit"><img src="images/PopulationMonde2.jpg" alt="" /></a>
 									<p>The project provides a clear understanding of population dynamics worldwide, highlights significant trends over the years, and demonstrates strong skills in data analysis and visualization, making it a valuable addition to any data analytics portfolio.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Pandas-EDA" target="_blank" class="button">View Project</a></li>
+										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Pandas-EDA/Exploratory%20Data%20Analysis%20in%20Pandas.ipynb" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -146,13 +147,14 @@
 								
 								<article>
 									<header>
-										<h2><a href="#">wikipedia Scraping Data<br />
-										with Python</a></h2>
+										<h2><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Data%20cleaning%20and%20EDA%20in%20(MYSQL)" target="_blank">Data Cleaning & EDA (in MYSQL)</a></h2>
 									</header>
-									<a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/blob/main/Scraping%20a%20Table%20from%20a%20Website.ipynb" target="_blank" class="image fit"><img src="images/00.jpg" alt="" /></a>
-									<p>In this project we scrape data table from wikipedia to visual this data in python as example of pulling tables</p>
+									<a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Data%20cleaning%20and%20EDA%20in%20(MYSQL)" target="_blank" class="image fit"><img src="images/layoffs.jpg.jpg" alt="" /></a>
+									<p>In this project we take Layoffs data and transform 
+									it to make it more usable and we explore data for analysis in MYSQL .
+									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/blob/main/Scraping%20a%20Table%20from%20a%20Website.ipynb" target="_blank" class="button">View Project</a></li>
+										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Data%20cleaning%20and%20EDA%20in%20(MYSQL)" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
