--- a/index.html
+++ b/index.html
@@ -124,24 +124,24 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Movie Correlation<br />
+										<h2><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Movie%20Portfolio%20Project.ipynb" target="_blank">Movie Correlation<br />
 										with Python</a></h2>
 									</header>
-									<a href="github link here" class="image fit"><img src="images/movies.jpg" alt="" /></a>
+									<a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Movie%20Portfolio%20Project.ipynb" target="_blank" class="image fit"><img src="images/movies.jpg" alt="" /></a>
 									<p>In this project we look at what variables effect the gross revenue from movies.</p>
 									<ul class="actions special">
-										<li><a href="github link here" class="button">View Project</a></li>
+										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Movie%20Portfolio%20Project.ipynb" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Amazon Web Scraper<br />
+										<h2><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" target="_blank">Amazon Web Scraper<br />
 										with Python</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/amazon2.jpg" alt="" /></a>
+									<a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" target="_blank" class="image fit"><img src="images/amazon2.jpg" alt="" /></a>
 									<p>In this project we scrape data from Amazon to analyze price data for products.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
