--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
 										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Power%20Bi%20-projects" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
+
+								<article>
+									<header>
+										<h2><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/SalesDashboard-Excel/Dashboard.png" target="_blank">Excel Pivot Table & Dashboard<br />
+										with Python</a></h2>
+									</header>
+									<a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/SalesDashboard-Excel/Dashboard.png" target="_blank" class="image fit"><img src="images/excel.png" alt="" /></a>
+									<p>Developed an interactive sales dashboard using Excel, Power Query, Power Pivot, and Pivot Tables to analyze sales performance across branches, categories, and payment methods. Cleaned and modeled data using Power Query and Power Pivot to provide dynamic insights and support data-driven decisions.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/SalesDashboard-Excel/Dashboard.png" target="_blank" class="button">View Project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href="https://public.tableau.com/app/profile/motasem.kharouf/vizzes" target="_blank">Tableau Dashboards<br />
@@ -133,17 +145,7 @@
 										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Movie%20Portfolio%20Project.ipynb" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<h2><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" target="_blank">Amazon Web Scraper<br />
-										with Python</a></h2>
-									</header>
-									<a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" target="_blank" class="image fit"><img src="images/amazon2.jpg" alt="" /></a>
-									<p>In this project we scrape data from Amazon to analyze price data for products.</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" target="_blank" class="button">View Project</a></li>
-									</ul>
-								</article>
+								
 								
 								<article>
 									<header>
