--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								
 								<article>
 									<header>
 										<h2><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/COVID%20Portfolio%20Project%20-%20Data%20Exploration.sql"  target="_blank">COVID 19
@@ -81,10 +82,12 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Power%20Bi%20-projects" target="_blank"  class="image fit"><img src="images/power-BI.jpeg" alt="" /></a>
-									<p>1. Clustered HR Data Dashboards – HR analytics using DAX, clustering, and KPIs for workforce insights.
-
-<br> <br>2. Professional Survey Breakdown – Global survey analysis on salaries, roles, and satisfaction metrics.
- </p>
+									<h3><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Power%20Bi%20-projects/Clustered%20HR%20Data%20-Dashboard/home-dashboard.png" target="_blank">Clustered HR Data -Dashboard
+										</a></h3>
+										<h3><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Power%20Bi%20-projects/SalesDashBoard/Screenshot%202025-10-23%20180143.png" target="_blank">Sales-Dashboard
+										</a></h3>
+										<h3><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Power%20Bi%20-projects/DATA%20PROFESSIONAL%20SURVEY%20BREAKDOWN-Dashboard/Dashboard%20preview.png" target="_blank">DATA PROFESSIONAL SURVEY BREAKDOWN-Dashboard
+										</a></h3>
 									<ul class="actions special">
 										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Power%20Bi%20-projects" target="_blank" class="button">View Project</a></li>
 									</ul>
