--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>Ps,Nablus<br /> 
+								<p>Jordan<br /> 
 								</p>
 							</section>
 							<section>
