--- a/index.html
+++ b/index.html
@@ -82,14 +82,17 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Power%20Bi%20-projects" target="_blank"  class="image fit"><img src="images/power-BI.jpeg" alt="" /></a>
+									<h3><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Power%20Bi%20-projects/superbowl%20dashboard/s1.png" target="_blank">Super Bowl Ads Dashboard
+										</a></h3>
 									<h3><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Power%20Bi%20-projects/Clustered%20HR%20Data%20-Dashboard/home-dashboard.png" target="_blank">Clustered HR Data -Dashboard
 										</a></h3>
 										<h3><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Power%20Bi%20-projects/SalesDashBoard/Screenshot%202025-10-23%20180143.png" target="_blank">Sales-Dashboard
 										</a></h3>
 										<h3><a href="https://github.com/Motasemkharouf/PortfolioProjects/blob/main/Power%20Bi%20-projects/DATA%20PROFESSIONAL%20SURVEY%20BREAKDOWN-Dashboard/Dashboard%20preview.png" target="_blank">DATA PROFESSIONAL SURVEY BREAKDOWN-Dashboard
 										</a></h3>
+							
 									<ul class="actions special">
-										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Power%20Bi%20-projects" target="_blank" class="button">View Project</a></li>
+										<li><a href="https://github.com/Motasemkharouf/PortfolioProjects-Data-Analyst/tree/main/Power%20Bi%20-projects" target="_blank" class="button">View Projects</a></li>
 									</ul>
 								</article>
 
