update from laptop

--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>Jordan<br /> 
+								<p>UAE, Dubai<br /> 
 								</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">+970-568-321-254</a></p>
+								<p><a href="#">+971-588-711-636</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
