--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://public.tableau.com/app/profile/motasem.kharouf/vizzes" target="_blank">Tableau Dashboards<br />
+										<h2><a href="https://public.tableau.com/app/profile/motasem.kharouf/vizzes" target="_blank">Tableau Dashboard<br />
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/motasem.kharouf/vizzes" target="_blank" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
-									<p>Tableau Dashboards for projects on AirBnB Financial Forecasting , Netflix data distrabution</p>
+									<p>A simple Tableau Dashboards for projects on AirBnB Financial Forecasting </p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/motasem.kharouf/vizzes" target="_blank" class="button">View Project</a></li>
 									</ul>
